1998-09-21  Markus Wuebben  <markus@office.DInet.de>

	* added a short cut for mail checking

1998-09-12  Markus Wuebben  <markus@kde.org>

	* some nice little fixes

1998-09-11  Juraj Bednar    <bednar@isternet.sk>

	* finally wrote PGP replying and forwarding decryption
	* PGP 5.0i should work now with no problems (should ;-)

Sun Sep  6 19:20:34 1998  Markus Wuebben  <mason@HoneyBunny.uni-dortmund.de>

	* kmacctpop.cpp (setPasswd): Fixed password problem.

Sun Sep  6 18:28:45 1998  Markus Wuebben  <markus@kde.org>

	* kmreaderwin.cpp :  Finally fixed attachment problem

1998-07-31  Markus Wuebben  <markus@kde.org>

	* kmsettings.cpp / kmmainwin.cpp Implemented send mail on check.
	* kmacctlocal.cpp (processNewMail): Added message box
	warning if mail folder was not found.

	* kmmainwin.cpp Added editing of message in outbox folder.
	* kmfolderdlg.cpp Removed out of index warning
	

1998-07-23  Stefan Taferner  <taferner@kde.org>

	* Added message status "Read". This status is set to
	messages which are loaded with check-mail that have
	status set to "R".
	
	These messages appear whith blue text, but without
	the green ball to the left, in the message list.

1998-07-22  Markus Wuebben  <markus@kde.org>

	* main.cpp Applied session management patch.
 	* kmfolder.cpp Applied fseek patch for solaris

1998-07-03  Stefan Taferner  <taferner@kde.org>

	* PGP: fixed crash when no ~/.pgp/pubring.pgp is installed
	and signed message is selected.

1998-06-30  Stefan Taferner  <taferner@kde.org> (KMail-0.7.9)

	* PGP: removed dialog asking for pass phrase when only
	signed message was given, added missing asking for pass
	phrase when encrypted/signed message is sent.

	* Composer: fixed bug that showed busy pointer all the
	time with auto-append-signature set and no signature file
	given.

	* Composer: removed mSendImmediate which seems unused
	in the composer nowadays. Simplified code of slotSend,
	slotSendNow, and slotSendLater (to be easier consistent).
